# glyph-pdf

./: .gitattributes  .gitignore  .graphifyignore  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  LICENSE-3RD-PARTY.md  PRD.md  README.md  ROADMAP.md  SECURITY.md  SESSION_BRIEF_NEXT.md  SESSION_PROMPTS_V1.md  SESSION_PROMPTS_V2.md  build_all.bat  enterprise_installer.wxs  resources.qrc  script.ps1  script2.ps1  trc_out.txt  tsv_out.txt  vcpkg.json
.context/: README.md  m2p2-source-analysis-a.md  m2p2-vault-summary.md  m2p3-source-analysis-a.md  m2p3-source-analysis-b.md  m2p3-vault-summary.md  m2p4-source-analysis-a.md  m2p4-source-analysis-b.md  m2p4-vault-summary.md  m2p5-source-analysis-a.md  m2p5-source-analysis-b.md  m2p5-vault-summary.md  m3p1-source-analysis-a.md  m3p1-source-analysis-b.md  m3p1-vault-summary.md  m3p2-source-analysis-b.md  m3p2-vault-summary.md  m3p3-source-analysis.md  m3p4-source-analysis.md  m3p5-source-analysis.md  resume-2026-06-01-pipeline.md
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
.obsidian/: app.json  appearance.json  core-plugins.json  graph.json
cmake/: FindPdfium.cmake  toolchain-ucrt64.cmake
docs/: MRC-ENCODER-LICENSE-AUDIT.md  djot-encode-design.md  github-setup.sh
docs/audit/: AUDIT-2026-06-02.md  REMEDIATION-SESSION-PROMPTS.md  _gen_pdf.py
docs/performance/: hot-path-analysis.md
docs/planning/: AUDIT-v1.0.0.md  CONSOLIDATED-CATCHUP-PROMPT.md  M1-REMEDIATION.md  MONTHS-2-8-PROMPTS.md  MSYS2-MIGRATION.md  NEXT-SESSION-HAND-OFF.md  README.md
docs/release/: release-commands.md  release-notes-v1.0.0.md  release-notes-v1.0.1.md  signing-instructions.md
docs/security/: audit-vendor-shortlist.md
docs/walkthroughs/: m7-prompt-3-walkthrough.md  m8-prompt-1-walkthrough.md
graphify-out/: GRAPH_REPORT.md  graph.html  graph.json  manifest.json
marketing/: demo-script.md  website-copy.md
marketing/press-kit/: product-summary.md
marketing/screenshots/: README.md  screenshot-guide.md
memory/: Annotation System.md  Architecture.md  Audit Report.md  Backend Engines.md  Build + Environment.md  Home.md  PRD Summary.md  Roadmap + Status.md  ToolMode Reference.md  UI Components.md
models/pp_doclayout/: PROVENANCE.md
models/ppocrv5/: PROVENANCE.md  STATUS.md
packaging/: GlyphPDF.wxs  License.rtf  WINGET-SUBMISSION.md  build-msi.bat  build-msi.ps1  build-portable.ps1  check-deps.bat  deploy-msys2.bat  deploy-qt.bat  deploy.ps1
packaging/winget/: Glyph.GlyphPDF.installer.yaml  Glyph.GlyphPDF.locale.en-US.yaml  Glyph.GlyphPDF.yaml
resources/: theme_dark.qss  theme_highcontrast.qss  theme_light.qss
src/: GpMainWindow.cpp  GpMainWindow.h
src/app/: Bootstrapper.cpp  Bootstrapper.h  app_icon.rc  main.cpp
src/commands/: AddFormFieldCommand.h  CropPageCommand.cpp  CropPageCommand.h  DeleteFormFieldCommand.h  DeleteImageCommand.h  DeletePageCommand.h  EditAnnotationCommand.h  EditFormFieldCommand.h  EditTextInlineCommand.h  EncryptDocumentHelper.h  InsertPageCommand.h  MoveFormFieldCommand.h  MoveImageCommand.h  RedactCommand.h  ReorderPageCommand.cpp  ReorderPageCommand.h  ReplaceImageCommand.h  ResizeFormFieldCommand.h  ResizeImageCommand.h  RotateImageCommand.h  RotatePageCommand.h  SanitizeDocumentHelper.h  SetMetadataCommand.h  SignDocumentHelper.h
src/core/: AnnotationSerializer.cpp  AnnotationSerializer.h  AnnotationTypes.h  AppContext.h  CredentialManager.cpp  CredentialManager.h  ErrorInfo.cpp  ErrorInfo.h  ImageTypes.h  OcrTypes.h  PdfEnums.h  TempFileManager.cpp  TempFileManager.h  ToolId.cpp  ToolId.h  UpdateChecker.cpp  UpdateChecker.h
src/docmodel/: Block.cpp  Block.h  CMakeLists.txt  DocumentFuzzer.cpp  DocumentFuzzer.h  Inline.cpp  Inline.h  ProvenanceTag.h  SemanticDocument.cpp  SemanticDocument.h
src/engines/: AutosaveManager.cpp  AutosaveManager.h  BackendRouter.cpp  BackendRouter.h  CollaborationManager.cpp  CollaborationManager.h  ConversionManager.cpp  ConversionManager.h  DiffEngine.cpp  DiffEngine.h  DocumentSession.cpp  DocumentSession.h  FormManager.cpp  FormManager.h  MyersDiff.cpp  MyersDiff.h  OcrEngine.cpp  OcrEngine.h  PatternRedactor.cpp  PatternRedactor.h  PdfEditorEngine.cpp  PdfEditorEngine.h  RenderCache.cpp  RenderCache.h  SignatureManager.cpp  SignatureManager.h  VeraPdfValidator.cpp  VeraPdfValidator.h
src/modes/: AIChatPanel.cpp  AIChatPanel.h  BatchMode.cpp  BatchMode.h  CompareMode.cpp  CompareMode.h  CompressDialog.cpp  CompressDialog.h  FormBuilderMode.cpp  FormBuilderMode.h  FormFieldPropertiesPanel.cpp  FormFieldPropertiesPanel.h  ModeController.cpp  ModeController.h  OCRMode.cpp  OCRMode.h  PagesMode.cpp  PagesMode.h  PdfAValidationPanel.cpp  PdfAValidationPanel.h  RedactMode.cpp  RedactMode.h  SignaturesPanel.cpp  SignaturesPanel.h  WatermarkDialog.cpp  WatermarkDialog.h
src/pdfws_djot/: CMakeLists.txt  DJOT_SPEC_VERSION  DjotToRichTextXhtml.cpp  DjotToRichTextXhtml.h  IDjotCodec.h  IDjotMapper.h  LuaDjotCodec.cpp  LuaDjotCodec.h  PdfStructureMapper.cpp  PdfStructureMapper.h  ProvenanceGuard.cpp  ProvenanceGuard.h
tests/: TestAiProvider.cpp  TestAnnotationDjot.cpp  TestAutosave.cpp  TestBatchMode.cpp  TestChain1.cpp  TestControllers.cpp  TestDiffEngine.cpp  TestDjotFuzz.cpp  TestDjotRoundtrip.cpp  TestEncryption.cpp  TestFormBuilder.cpp  TestFormPersistence.cpp  TestInspector.cpp  TestIntegration.cpp  TestLaneScheduler.cpp  TestLayoutEnsemble.cpp  TestMrcPipeline.cpp  TestOcrDjotMapper.cpp  TestOcrPipeline.cpp  TestOfficeImport.cpp  TestPagesMode.cpp  TestPatternRedact.cpp  TestPdfEditorInterface.cpp  TestPerformance.cpp  TestRapidOcr.cpp  TestRedaction.cpp  TestResourceLimits.cpp  TestRibbonIntegrity.cpp  TestRobustness.cpp  TestSanitization.cpp  TestSignatureRealCrypto.cpp  TestSignatureValidation.cpp  TestSignatureValidationMock.cpp  TestThreadSafety.cpp  TestVeraPdf.cpp  UnitTests.cpp  smoke_test.cpp
tools/: clean_scanned_pdf.py
translations/: README.md  glyphpdf_ar.ts  glyphpdf_de.ts  glyphpdf_fr.ts
(+255 files in other folders)
